--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="index.html">About me</a>
+              <a class="nav-link" href="index.html#about">About me</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="work.html">Work</a>
+              <a class="nav-link" href="work.html">Projects</a>
             </li>
             <li class="nav-item">
               <a class="nav-link disabled" href="work.html">Contact</a>
@@ -62,24 +62,24 @@
     </nav>
     <div class="container">
       <div class="row">
-        <div class="col-sm-6">
+        <div class="col-lg-6">
           <h3>Hi, My name is</h3>
           <h1>Gelareh Akasheh</h1>
           <h2>I’m a frontend developer based in Iran</h2>
         </div>
-        <div class="col-sm-6">
+        <div class="col-lg-6">
           <img src="girl on laptop.jpg" alt="" class="girl-laptop" />
         </div>
       </div>
     </div>
-    <div class="spass"></div>>
+    <div class="spass"></div>
     <div class="container">
       <div class="row">
-        <div class="col-sm-4">
+        <div class="col-lg-5">
             <img src="gelareh.png" alt="" class="gelareh-photo" />
             </div>
-          <div class="col-sm-8">   
-    <h4 class="about">About me</h4>
+          <div class="col-lg-7">   
+    <h4 id="about">About me</h4>
     <p class="story">
       My Name is Gelareh and I work in industrial engineering and management for
       than 16 years. However, I really don’t enjoy my job and all of these years
