--- a/work.html
+++ b/work.html
@@ -23,7 +23,10 @@
     <title>Gelareh Akasheh</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav
+      class="navbar navbar-expand-lg navbar-light fixed-top"
+      style="background-color: #f6e6e0"
+    >
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html">Gelareh Akasheh</a>
         <button
@@ -45,10 +48,10 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="index.html">About me</a>
+              <a class="nav-link" href="index.html#about">About me</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="work.html">Work</a>
+              <a class="nav-link" href="work.html">Projects</a>
             </li>
             <li class="nav-item">
               <a class="nav-link disabled" href="work.html">Contact</a>
@@ -57,5 +60,6 @@
         </div>
       </div>
     </nav>
+    <h4 class="experinse">Projects</h4>
   </body>
 </html>
