--- a/work.html
+++ b/work.html
@@ -61,5 +61,38 @@
       </div>
     </nav>
     <h4 class="experinse">Projects</h4>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-5">
+          <img src="travel.png" alt="" class="travel-photo" />
+        </div>
+        <div class="col-lg-7">
+          <h4 class="head-travel">Travel Landing Page</h4>
+          <p class="travel-story">
+            I entered the world of front-end development by gaining some
+            knowledge in HTML, CSS, and JavaScript. I used my knowledge of these
+            languages, along with my new skills in VS Code, to build a landing
+            page about Travel. The page utilizes JavaScript functions to create
+            user interaction.
+          </p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-5">
+          <h4 class="head-weather">Weather App</h4>
+          <p class="weather-story">
+            I built a Vanilla JavaScript weather app in SheCodes Plus, an
+            advanced 8-week JavaScript coding workshop. Building upon my
+            previously-gained knowledge, I also became skilled in Bootstrap,
+            API’s, real-life development workflow, hosting, and advanced
+            JavaScript. I combined all of these skills to create a
+            fully-functioning weather app.
+          </p>
+        </div>
+        <div class="col-lg-7">
+          <img src="weather.png" alt="" class="weather-photo" />
+        </div>
+      </div>
+    </div>
   </body>
 </html>
