--- a/work.html
+++ b/work.html
@@ -60,7 +60,7 @@
         </div>
       </div>
     </nav>
-    <h4 class="experinse">Projects</h4>
+    <h4 class="experinse">My Projects</h4>
     <div class="container">
       <div class="row">
         <div class="col-lg-5">
@@ -94,5 +94,10 @@
         </div>
       </div>
     </div>
+    <h4 class="contact">Get in Touch</h4>
+    <i class="fab fa-instagram"></i>
+    <i class="far fa-envelope"></i>
+    <i class="fab fa-linkedin"></i>
+    <i class="fab fa-github"></i>
   </body>
 </html>
