--- a/contact.html
+++ b/contact.html
@@ -60,41 +60,11 @@
         </div>
       </div>
     </nav>
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-6">
-          <h3>Hi, My name is</h3>
-          <h1>Gelareh Akasheh</h1>
-          <h2>I’m a frontend developer based in Iran</h2>
-        </div>
-        <div class="col-lg-6">
-          <img src="girl on laptop.jpg" alt="" class="girl-laptop" />
-        </div>
-      </div>
-      <div class="spass"></div>
-    </div>
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-5">
-          <img src="gelareh.png" alt="" class="gelareh-photo" />
-        </div>
-        <div class="col-lg-7">
-          <h4 id="about">About me</h4>
-          <p class="story">
-            My Name is Gelareh and I work in industrial engineering and
-            management for than 16 years. However, I really don’t enjoy my job
-            and all of these years I have looking for a way to change my career.
-            Finally, I decided to follow my interest in computer science and
-            found SheCodes codding workshop. I started SheCodes workshop in 2021
-            and it has changed my life since.<br />
-            SheCodes’ well-structure workshop has enabled me to learn the
-            Front-End Development fundamentals in less than half a year. The
-            projects that are showcase on my website are managed using Git and
-            GitHub to help streamline the development workflow.
-          </p>
-        </div>
-      </div>
-      <div class="spass-but"></div>
+    <h4 class="contact">Get in Touch</h4>
+    <i class="far fa-envelope"></i>
+    <i class="fab fa-linkedin"></i>
+    <i class="fab fa-github"></i>
+    <div class="spass-but"></div>
     </div>
     <div class="footer">
       <div class="icon">
