--- a/work.html
+++ b/work.html
@@ -54,7 +54,7 @@
               <a class="nav-link" href="work.html">Projects</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link disabled" href="work.html">Contact</a>
+              <a class="nav-link" href="contact.html">Contact</a>
             </li>
           </ul>
         </div>
@@ -88,16 +88,55 @@
             JavaScript. I combined all of these skills to create a
             fully-functioning weather app.
           </p>
+          <button class=lunch>
+          <a href="https://friendly-wilson-23f140.netlify.app/" >
+              Lunch Project
+          </a>
+          </button>
         </div>
         <div class="col-lg-7">
           <img src="weather.png" alt="" class="weather-photo" />
         </div>
       </div>
+      <div class="row">
+          <div class="col-lg-5">
+          <img src="weather.png" alt="" class="dictionary-photo" />
+        </div>
+        <div class="col-lg-7">
+        <h4 class="head-dictionary">Dictionary App</h4>
+          <p class="dictionary-story">
+            I immersed myself in React development in SheCodes React. 
+            I used my knowledge of this highly-demanded framework to build a working 
+            dictionary app incorporating coding best practices, along with the most popular
+             tools and technologies.
+          </p>
+        </div>
+        </div>
+      </div>
     </div>
-    <h4 class="contact">Get in Touch</h4>
-    <i class="fab fa-instagram"></i>
-    <i class="far fa-envelope"></i>
-    <i class="fab fa-linkedin"></i>
-    <i class="fab fa-github"></i>
+    <div class="spass-but"></div>
+    </div>
+    <div class="footer">
+      <div class="icon">
+        <a href="mailto:gelareh.akasheh@gmail.com">
+          <i class="far fa-envelope"></i>
+        </a>
+        <a
+          href="https://www.linkedin.com/in/gelareh-akasheh-49171b64/"
+          target="_blank"
+        >
+          <i class="fab fa-linkedin"></i>
+        </a>
+        <a href="https://github.com/Gelarehak" target="_blank"
+          ><i class="fab fa-github"></i>
+        </a>
+      </div>
+      <div class="email">
+        <a href="mailto:gelareh.akasheh@gmail.com">
+          gelareh.akasheh@gmail.com
+        </a>
+      </div>
+      <div class="coded-by">This website was coded by Gelareh Akasheh</div>
+    </div>
   </body>
 </html>
