--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="index.html#about">About me</a>
+              <a class="nav-link" href="index.html#gelareh-photo">About me</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="work.html">Projects</a>
@@ -76,7 +76,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-5">
-          <img src="gelareh.png" alt="" class="gelareh-photo" />
+          <img src="gelareh.png" alt="" id="gelareh-photo" />
         </div>
         <div class="col-lg-7">
           <h4 id="about">About me</h4>
