--- a/contact.html
+++ b/contact.html
@@ -60,10 +60,28 @@
         </div>
       </div>
     </nav>
+    <div class="container">
     <h4 class="contact">Get in Touch</h4>
-    <i class="far fa-envelope"></i>
-    <i class="fab fa-linkedin"></i>
-    <i class="fab fa-github"></i>
+   <div class="get-in-touch"> If you wanna get in touch, talk to me about a project collaboration,
+fill up the awesome form below or send an email to <a href="mailto:gelareh.akasheh@gmail.com">gelareh.akasheh@gmail.com</a>.
+</div>
+    <form> 
+        <div class="row">
+        <div class="col">
+            <lable for="name">Name</lable>
+        <input type="text" class="form-control" placeholder="" aria-label="First name">
+        </div>
+       <div class="col">
+           <lable for="email">Email</lable>
+        <input type="text" class="form-control" placeholder="" aria-label="Last name">
+       </div>
+       </div>
+        <div class="mb-3">
+        <label for="exampleFormControlTextarea1" class="form-label">Message</label>
+        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+        </div>
+    </form>
+    </div>
     <div class="spass-but"></div>
     </div>
     <div class="footer">
