--- a/contact.html
+++ b/contact.html
@@ -62,25 +62,26 @@
     </nav>
     <div class="container">
     <h4 class="contact">Get in Touch</h4>
-   <div class="get-in-touch"> If you wanna get in touch, talk to me about a project collaboration,
-fill up the awesome form below or send an email to <a href="mailto:gelareh.akasheh@gmail.com">gelareh.akasheh@gmail.com</a>.
-</div>
-    <form> 
+     <div class="get-in-touch"> If you wanna get in touch, talk to me about a project collaboration,
+     fill up the awesome form below or send an email to <a href="mailto:gelareh.akasheh@gmail.com">gelareh.akasheh@gmail.com</a>.
+      </div>
+      <div class="contact-me"> 
         <div class="row">
         <div class="col">
-            <lable for="name">Name</lable>
+            <lable for="name" class="name">Name</lable>
         <input type="text" class="form-control" placeholder="" aria-label="First name">
         </div>
        <div class="col">
-           <lable for="email">Email</lable>
+           <lable for="email" class="email-address">Email</lable>
         <input type="text" class="form-control" placeholder="" aria-label="Last name">
        </div>
        </div>
         <div class="mb-3">
-        <label for="exampleFormControlTextarea1" class="form-label">Message</label>
-        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+        <label for="exampleFormControlTextarea1" class="form-label message" >Message</label>
+        <textarea class="form-control" id="exampleFormControlTextarea1" rows="7"></textarea>
         </div>
-    </form>
+        <input type="submit" value="Send" class="submit" />
+        </div>
     </div>
     <div class="spass-but"></div>
     </div>
