--- a/contact.html
+++ b/contact.html
@@ -65,6 +65,7 @@
      <div class="get-in-touch"> If you wanna get in touch, talk to me about a project collaboration,
      fill up the awesome form below or send an email to <a href="mailto:gelareh.akasheh@gmail.com">gelareh.akasheh@gmail.com</a>.
       </div>
+      <form method="post">
       <div class="contact-me"> 
         <div class="row">
         <div class="col">
@@ -82,6 +83,7 @@
         </div>
         <input type="submit" value="Send" class="submit" />
         </div>
+        </form>
     </div>
     <div class="spass-but"></div>
     </div>
