--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="gelareh akasheh front-end developer base in Iran"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -20,7 +24,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="style.css" />
-    <title>Gelareh Akasheh</title>
+    <title>Gelareh Akasheh-Front-end Developer</title>
   </head>
   <body>
     <nav
@@ -28,7 +32,9 @@
       style="background-color: #f6e6e0"
     >
       <div class="container-fluid">
-        <a class="navbar-brand" href="index.html">Gelareh Akasheh</a>
+        <a class="navbar-brand gelareh-name" href="index.html"
+          >Gelareh Akasheh</a
+        >
         <button
           class="navbar-toggler"
           type="button"
@@ -43,18 +49,30 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html"
+              <a
+                class="nav-link active"
+                href="index.html"
+                title="homepage gelareh"
                 >Home</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="index.html#gelareh-photo">About me</a>
+              <a
+                class="nav-link active"
+                href="index.html#gelareh-photo"
+                title="about gelareh"
+                >About me</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="work.html">Projects</a>
+              <a class="nav-link" href="work.html" title="projects gelareh"
+                >Projects</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contact</a>
+              <a class="nav-link" href="contact.html" title="contact gelareh"
+                >Contact</a
+              >
             </li>
           </ul>
         </div>
@@ -65,7 +83,7 @@
         <div class="col-lg-6">
           <h3>Hi, My name is</h3>
           <h1>Gelareh Akasheh</h1>
-          <h2>I’m a frontend developer based in Iran</h2>
+          <h2>I’m a Front-end Developer based in Iran</h2>
         </div>
         <div class="col-lg-6">
           <img src="girl on laptop.jpg" alt="" class="girl-laptop" />
@@ -76,7 +94,11 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-5">
-          <img src="gelareh.png" alt="" id="gelareh-photo" />
+          <img
+            src="gelareh.png"
+            alt="gelareh akasheh photo"
+            id="gelareh-photo"
+          />
         </div>
         <div class="col-lg-7">
           <h4 id="about">About me</h4>
