--- a/work.html
+++ b/work.html
@@ -28,7 +28,9 @@
       style="background-color: #f6e6e0"
     >
       <div class="container-fluid">
-        <a class="navbar-brand" href="index.html">Gelareh Akasheh</a>
+        <a class="navbar-brand gelareh-name" href="index.html"
+          >Gelareh Akasheh</a
+        >
         <button
           class="navbar-toggler"
           type="button"
@@ -43,18 +45,27 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html"
+              <a class="nav-link" href="index.html" title="homepage gelareh"
                 >Home</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="index.html#about">About me</a>
+              <a
+                class="nav-link"
+                href="index.html#gelareh-photo"
+                title="about gelareh"
+                >About me</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="work.html">Projects</a>
+              <a class="nav-link active" href="work.html" title="projects gelareh"
+                >Projects</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contact</a>
+              <a class="nav-link" href="contact.html" title="contact gelareh"
+                >Contact</a
+              >
             </li>
           </ul>
         </div>
@@ -64,7 +75,7 @@
     <h4 class="experinse">My Projects</h4>
       <div class="row">
         <div class="col-lg-5">
-          <img src="travel.png" alt="" class="travel-photo" />
+          <img src="travel.png" alt="teavel page gelareh" class="travel-photo" />
         </div>
         <div class="col-lg-7">
           <h4 class="head-travel">Travel Landing Page</h4>
@@ -95,12 +106,12 @@
           </button>
         </div>
         <div class="col-lg-7">
-          <img src="weather.png" alt="" class="weather-photo" />
+          <img src="weather.png" alt="weather app gelareh" class="weather-photo" />
         </div>
       </div>
       <div class="row">
           <div class="col-lg-5">
-          <img src="weather.png" alt="" class="dictionary-photo" />
+          <img src="weather.png" alt="dictionary app gelareh" class="dictionary-photo" />
         </div>
         <div class="col-lg-7">
         <h4 class="head-dictionary">Dictionary App</h4>
