--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
               <a
                 class="nav-link active"
                 href="index.html"
-                title="homepage gelareh"
+                title="homepage gelareh akasheh"
                 >Home</a
               >
             </li>
@@ -60,17 +60,23 @@
               <a
                 class="nav-link active"
                 href="index.html#gelareh-photo"
-                title="about gelareh"
+                title="about gelareh akasheh"
                 >About me</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="work.html" title="projects gelareh"
+              <a
+                class="nav-link"
+                href="work.html"
+                title="gelareh akasheh projects"
                 >Projects</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contact.html" title="contact gelareh"
+              <a
+                class="nav-link"
+                href="contact.html"
+                title="contact gelareh akasheh"
                 >Contact</a
               >
             </li>
@@ -120,25 +126,42 @@
     </div>
     <div class="footer">
       <div class="icon">
-        <a href="mailto:gelareh.akasheh@gmail.com">
+        <a
+          href="mailto:gelareh.akasheh@gmail.com"
+          title="gelareh akasheh email"
+        >
           <i class="far fa-envelope"></i>
         </a>
         <a
           href="https://www.linkedin.com/in/gelareh-akasheh-49171b64/"
           target="_blank"
+          title="gelareh akasheh linkdin"
         >
           <i class="fab fa-linkedin"></i>
         </a>
-        <a href="https://github.com/Gelarehak" target="_blank"
+        <a
+          href="https://github.com/Gelarehak"
+          target="_blank"
+          title="gelareh akasheh github"
           ><i class="fab fa-github"></i>
         </a>
       </div>
       <div class="email">
-        <a href="mailto:gelareh.akasheh@gmail.com">
+        <a
+          href="mailto:gelareh.akasheh@gmail.com"
+          title="gelareh akasheh email"
+        >
           gelareh.akasheh@gmail.com
         </a>
       </div>
-      <div class="coded-by">This website was coded by Gelareh Akasheh</div>
+      <div class="coded-by">
+        This website was coded by Gelareh Akasheh and is
+        <a
+          href="https://github.com/Gelarehak/Portfolio-Gelareh-Akasheh"
+          target="_blank"
+          >open-sourced</a
+        >
+      </div>
     </div>
   </body>
 </html>
