--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="gelareh akasheh front-end developer base in Iran"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -20,7 +24,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="style.css" />
-    <title>Gelareh Akasheh</title>
+    <title> Contact Gelareh Akasheh</title>
   </head>
   <body>
     <nav
@@ -45,7 +49,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="index.html" title="homepage gelareh"
+              <a class="nav-link" href="index.html" title="homepage gelareh akasheh"
                 >Home</a
               >
             </li>
@@ -53,17 +57,17 @@
               <a
                 class="nav-link"
                 href="index.html#gelareh-photo"
-                title="about gelareh"
+                title="about gelareh akasheh"
                 >About me</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="work.html" title="projects gelareh"
+              <a class="nav-link" href="work.html" title="gelareh akasheh projects"
                 >Projects</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="contact.html" title="contact gelareh"
+              <a class="nav-link active" href="contact.html" title="contact gelareh akasheh"
                 >Contact</a
               >
             </li>
@@ -98,27 +102,44 @@
     </div>
     <div class="spass-but"></div>
     </div>
-    <div class="footer">
+        <div class="footer">
       <div class="icon">
-        <a href="mailto:gelareh.akasheh@gmail.com">
+        <a
+          href="mailto:gelareh.akasheh@gmail.com"
+          title="gelareh akasheh email"
+        >
           <i class="far fa-envelope"></i>
         </a>
         <a
           href="https://www.linkedin.com/in/gelareh-akasheh-49171b64/"
           target="_blank"
+          title="gelareh akasheh linkdin"
         >
           <i class="fab fa-linkedin"></i>
         </a>
-        <a href="https://github.com/Gelarehak" target="_blank"
+        <a
+          href="https://github.com/Gelarehak"
+          target="_blank"
+          title="gelareh akasheh github"
           ><i class="fab fa-github"></i>
         </a>
       </div>
       <div class="email">
-        <a href="mailto:gelareh.akasheh@gmail.com">
+        <a
+          href="mailto:gelareh.akasheh@gmail.com"
+          title="gelareh akasheh email"
+        >
           gelareh.akasheh@gmail.com
         </a>
       </div>
-      <div class="coded-by">This website was coded by Gelareh Akasheh</div>
+      <div class="coded-by">
+        This website was coded by Gelareh Akasheh and is
+        <a
+          href="https://github.com/Gelarehak/Portfolio-Gelareh-Akasheh"
+          target="_blank"
+          >open-sourced</a
+        >
+      </div>
     </div>
   </body>
 </html>
