--- a/index.html
+++ b/index.html
@@ -109,16 +109,17 @@
         <div class="col-lg-7">
           <h4 id="about">About me</h4>
           <p class="story">
-            My Name is Gelareh and I work in industrial engineering and
-            management for than 16 years. However, I really don’t enjoy my job
-            and all of these years I have looking for a way to change my career.
-            Finally, I decided to follow my interest in computer science and
-            found SheCodes codding workshop. I started SheCodes workshop in 2021
-            and it has changed my life since.<br />
-            SheCodes’ well-structure workshop has enabled me to learn the
-            Front-End Development fundamentals in less than half a year. The
-            projects that are showcase on my website are managed using Git and
-            GitHub to help streamline the development workflow.
+            My Name is Gelareh and I have been working in industrial engineering
+            and management filled for more than 16 years. However, I never enjoy
+            my job and all of these years I have been looking for a way to
+            change my career. Finally, I decided to follow my interest in
+            computer science and could find SheCodes codding workshop.
+            <br />
+            I attended to SheCodes workshop in 2021 and my life has been changed
+            since then. SheCodes’ well-structure workshop has enabled me to
+            learn the Front-End Development fundamentals in less than half a
+            year. The projects that are showcase on my website are managed using
+            Git and GitHub to help streamline the development workflow.
           </p>
         </div>
       </div>
