fixed line Hight

--- a/contact.html
+++ b/contact.html
@@ -78,7 +78,7 @@
     <div class="container">
     <h4 class="contact">Get in Touch</h4>
      <div class="get-in-touch"> If you wanna get in touch, talk to me about a project collaboration,
-     fill up the awesome form below or send an email to:<br /> <a href="mailto:gelareh.akasheh@gmail.com">gelareh.akasheh@gmail.com</a>.
+     fill up the awesome form below or send an email to:<br /> <a href="mailto:gelareh.akasheh@gmail.com">gelareh.akasheh@gmail.com</a>
       </div>
       <form method="post">
       <div class="contact-me"> 
